# hardware-simulation

./: .gitmodules  README.md
gps_csv_rostopic/: README.md  package.xml
gps_csv_rostopic/mapviz/: config2.mvc
gps_csv_rostopic/src/: simple_code.py
via_navsat_driver/: CMakeLists.txt  package.xml
via_navsat_driver/launch/: nmea_serial_driver.launch
via_robot/via_control/: CMakeLists.txt  package.xml
via_robot/via_control/config/: control.yaml
via_robot/via_control/launch/: control.launch
via_robot/via_control/rviz/: control.rviz
via_robot/via_description/: CMakeLists.txt  package.xml
via_robot/via_description/launch/: debug.launch  load.launch
via_robot/via_description/meshes/: link_1.STL  link_2.STL  link_3.STL  link_4.STL
via_robot/via_description/rviz/: urdf.rviz
via_robot/via_description/urdf/: via.gazebo.xacro  via.urdf.xacro
via_robot/via_description/urdf/IMU/: imu.gazebo.xacro  imu.urdf.xacro
via_robot/via_description/urdf/LIDAR/: lidar_hokuyo.gazebo.xacro  lidar_hokuyo.urdf.xacro
via_robot/via_description/urdf/d435/: d435.urdf.xacro
via_robot/via_description/urdf/gps/: gps.xacro
via_robot/via_gazebo/: CMakeLists.txt  package.xml
via_robot/via_gazebo/launch/: gazebo.launch  gazebo_steering.launch  gazebo_vs.launch  spawn_in_world.launch
via_robot/via_gazebo/worlds/: 1CropWithStopSign.world  akihiro.world  empty.world  emptyfarm.world  farmWith1CropRow.world  farmsoil.world  singlePillar.world  soyfarm.world  teste1.world  tobacco_plots.world  via_navtestmap.world  via_navtestmap1.world  via_navtestmap2.world  via_navtestmap3.world  via_navtestmap4.world
via_robot/via_navigation/: CMakeLists.txt  package.xml
via_robot/via_navigation/config/: localization.yaml
via_robot/via_navigation/launch/: via_amcl.launch  via_localization.launch  via_map.launch  via_move_map.launch  via_move_odom.launch  via_navigation.launch
via_robot/via_navigation/maps/: map.yaml
via_robot/via_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml
via_robot/via_navigation/params/map_nav/: global_costmap_params.yaml  local_costmap_params.yaml
via_robot/via_navigation/params/odom_nav/: global_costmap_params.yaml
via_robot/via_navigation/rviz/: conf_map.rviz  conf_odom.rviz
via_robot/via_navigation/scripts/: move_xyindoor.py
via_robot/via_navigation/src/: send_navigation_goals.cpp
via_robot/via_navigation/srv/: RequestGoalPos.srv
via_robot/via_sensors/bluesea2/launch/: LDS-50C-S.launch
via_robot/via_sensors/bluesea2/rviz/: visual.rviz
via_robot/via_utilities/gps_csv_rostopic/: CMakeLists.txt
via_robot/via_utilities/gps_csv_rostopic/launch/: gps.launch
via_robot/via_utilities/gps_csv_rostopic/src/: code.py  quality_code.py  simple_code.py
via_robot/via_utilities/via_gps_csv_reader/: CMakeLists.txt  README.md  package.xml
via_robot/via_utilities/via_gps_csv_reader/csv/: Teste2.csv  Teste4.csv
via_robot/via_utilities/via_gps_csv_reader/launch/: gps.launch
via_robot/via_utilities/via_gps_csv_reader/src/: code_panda.py  quality_code.py
via_world_simulation/: CMakeLists.txt  package.xml  setup.py
via_world_simulation/config/: teste.yaml  via.yaml
via_world_simulation/gt/: map.csv
via_world_simulation/launch/: robot_spawner.launch  rviz.launch  simulation.launch
via_world_simulation/models/: gps_block.sdf
via_world_simulation/models/nettle/: model.sdf
via_world_simulation/models/nettle/meshes/: nettle.dae
via_world_simulation/models/nettle2/: model.config  model.sdf
via_world_simulation/models/nettle2/materials/scripts/: nettle2.material
via_world_simulation/models/retro_pepsi_2/: model.sdf
via_world_simulation/src/virtual_maize_field/: generate_world.py
via_world_simulation/src/virtual_maize_field/world_generator/: field.world.template  field_2d_generator.py  robot_spawner.launch.template
via_world_simulation/worlds/: generated copy.world  generated.world
