<?xml version="1.0"?>
<package>
  <name>via_description</name>
  <version>0.0.0</version>
  <description>
    The description package for the VIA (Veiculo de Inspecao Agricola).
  </description>

  <maintainer email="labrob@todo.todo">labrob</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

</package>
