<?xml version="1.0"?>
<package format="2">
  <name>via_navigation</name>
  <version>0.0.0</version>
  <description>The via_navigation package</description>

  <maintainer email="vivian@todo.todo">vivian</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>robot_localization</build_export_depend>
  <exec_depend>move_base</exec_depend>

</package>
